syntax = "proto3";

import "google/api/annotations.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

package api;

option go_package = "github.com/Msik/h-microservice/pkg/api;api";

service Api {
    rpc StatV1(StatisticV1Request) returns (StatisticV1Response) {
        option (google.api.http) = {
            get: "/v1/stat"
        };
    }

    rpc AddCategoryV1(AddCategoryV1Request) returns (AddCategoryV1Response) {
        option (google.api.http) = {
            post: "/v1/category"
        };
    }

    rpc CategoryListV1(CategoryListV1Request) returns (CategoryListV1Response) {
        option (google.api.http) = {
            get: "/v1/category"
        };
    }

    rpc DeleteCategoryV1(DeleteCategoryV1Request) returns (DeleteCategoryV1Response) {
        option (google.api.http) = {
            delete: "/v1/category"
        };
    }

    rpc WasteListV1(WasteListV1Request) returns (WasteListV1Response) {
        option (google.api.http) = {
            get: "/v1/waste"
        };
    }

    rpc AddWasteListV1(AddWasteListV1Request) returns (AddWasteListV1Response) {
        option (google.api.http) = {
            post: "/v1/waste"
        };
    }

    rpc DeleteWasteListV1(DeleteWasteListV1Request) returns (DeleteWasteListV1Response) {
        option (google.api.http) = {
            delete: "/v1/waste"
        };
    }
}

message StatisticV1Request {
    string period = 1;
}

message StatisticV1Response {
    float wastes = 1;
}

message AddCategoryV1Request {
    string title = 1;
}

message AddCategoryV1Response {
    Category category = 1;
}

message Category {
    uint64 id = 1;
    string title = 2;
}

message CategoryListV1Request {

}

message CategoryListV1Response {
    repeated Category categories = 1;
}

message DeleteCategoryV1Request {
    uint64 id = 1;
}

message DeleteCategoryV1Response {
    bool success = 1;
}

message Waste {
    uint64 id = 1;
    float amount = 2;
    optional int64 category_id = 3;
}

message WasteListV1Request {
    uint64 limit = 1;
    uint64 offset = 2;
}

message WasteListV1Response {
    repeated Waste wastes = 1;
}

message AddWasteListV1Request {
    float amount = 1;
    optional uint64 category_id = 2;
}

message AddWasteListV1Response {
    Waste waste = 1;
}

message DeleteWasteListV1Request {
    uint64 id = 1;
}

message DeleteWasteListV1Response {
    bool success = 1;
}
